<resources>
    <string name="app_name">Scooter Eats</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="prompt_name">Name</string>

    <string name="prompt_register">Register</string>

    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="confirm_registry">Email not found. You want to create a new user with that email and password?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_cust_main">CustMainActivity</string>
    <string name="title_activity_login2">Sign in</string>

    <string-array name="account_types_array">
        <item>Hungry Person</item>
        <item>Driver</item>
        <item>Restaurant Owner</item>
    </string-array>
    <string name="title_activity_owner_main">OwnerMainActivity</string>
    <string name="title_activity_driver_main">DriverMainActivity</string>

</resources>
